force-app/main/default/objects/Memo__c/Memo__c.object-meta.xml
<CustomObject>
    <label>Memo</label>
    <nameField>
        <label>Memo Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>