force-app/main/default/objects/Memo__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <description>Salesforce Id of Parent record</description>
    <label>Parent Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>