force-app/main/default/objects/Memo__c/fields/Parent_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Type__c</fullName>
    <label>Parent Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archetype__c</fullName>
            </value>
            <value>
                <fullName>Archetype_Power__c</fullName>
            </value>
            <value>
                <fullName>Character__c</fullName>
            </value>
            <value>
                <fullName>Character_Power__c</fullName>
            </value>
            <value>
                <fullName>Custom_Data__c</fullName>
            </value>
            <value>
                <fullName>Effect__c</fullName>
            </value>
            <value>
                <fullName>Encounter__c</fullName>
            </value>
            <value>
                <fullName>Encounter_NPC__c</fullName>
            </value>
            <value>
                <fullName>Plot Point</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>RPG Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>